examples/test/testpolicy15673.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15673
  namespace: namespace261
spec:
  podSelector:
    matchLabels:
      key33: value25
      key18: value38
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value5
          key20: value41
          key33: value27
      podSelector:
        matchLabels:
          key31: value46
          key49: value11
